[gd_scene load_steps=4 format=3 uid="uid://2k38g2uiol8e"]

[ext_resource type="Theme" uid="uid://3t61g0061mea" path="res://assets/theme.tres" id="1_vfl5g"]
[ext_resource type="Script" path="res://scenes/overworld/mod_view/mod_view.gd" id="2_f3rcr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6ksel"]

[node name="Control" type="PanelContainer"]
offset_right = 88.0
offset_bottom = 32.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
theme = ExtResource("1_vfl5g")
theme_type_variation = &"GoldPanel"
theme_override_styles/panel = SubResource("StyleBoxEmpty_6ksel")
script = ExtResource("2_f3rcr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ModName" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_outline_color = Color(0.658824, 0.117647, 0.129412, 1)
theme_override_constants/outline_size = 2
text = "Conscription"

[node name="ModLevel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(1, 0.576471, 0.517647, 1)
text = "[2]"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 1

[node name="ModDescription" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
text = "Increases enemy generation by x%"
